platform/longhorn-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-dashboard-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: longhorn-frontend.longhorn-system.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80  # Kubernetes Dashboard default port
